--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "symfony/polyfill-apcu": "^1.0",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "^2.0"
+        "incenteev/composer-parameter-handler": "^2.0",
+        "bower-asset/bootstrap": "^3.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
@@ -60,6 +61,10 @@
         },
         "branch-alias": {
             "dev-master": "3.2-dev"
+        },
+        "asset-installer-paths": {
+            "npm-asset-library": "web/vendor",
+            "bower-asset-library": "web/vendor"
         }
     }
 }
