Added Post and Tag entities with constraints; updated Twig extension(add_ellipsis filter)

--- a/src/Olenaza/BlogBundle/Resources/config/routing_posts.yml
+++ b/src/Olenaza/BlogBundle/Resources/config/routing_posts.yml
@@ -13,6 +13,10 @@ posts_list_no_page:
       permanent: true
     methods: [GET]
 
+post_new:
+    path:     /new
+    defaults: { _controller: OlenazaBlogBundle:Post:new }
+
 post_show:
     path:     /{slug}
     defaults: { _controller: OlenazaBlogBundle:Post:show }
