--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -33,6 +33,8 @@ framework:
     assets: ~
     php_errors:
         log: true
+    translator:
+        fallback: %locale%
 
 
 # Twig Configuration
@@ -41,7 +43,6 @@ twig:
     strict_variables: "%kernel.debug%"
     form_themes:
             - 'bootstrap_3_layout.html.twig'
-            - 'form/fields.html.twig'
 
 # Doctrine Configuration
 doctrine:
@@ -68,3 +69,9 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+sonata_block:
+    default_contexts: [cms]
+    blocks:
+        sonata.admin.block.admin_list:
+            contexts: [admin]
