Added menus with KnpMenuBundle

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -36,15 +36,12 @@ framework:
     translator:
         fallback: %locale%
 
-
-# Twig Configuration
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
     form_themes:
             - 'bootstrap_3_layout.html.twig'
 
-# Doctrine Configuration
 doctrine:
     dbal:
         driver:   pdo_mysql
@@ -62,7 +59,6 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
 
-# Swiftmailer Configuration
 swiftmailer:
     transport: "%mailer_transport%"
     host:      "%mailer_host%"
@@ -75,3 +71,10 @@ sonata_block:
     blocks:
         sonata.admin.block.admin_list:
             contexts: [admin]
+
+knp_menu:
+    providers:
+        builder_alias: false
+        builder_service: true
+        container_aware: true
+
