--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -58,6 +58,13 @@ doctrine:
         auto_generate_proxy_classes: "%kernel.debug%"
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+        mappings:
+            gedmo_tree:
+                type: annotation
+                prefix: Gedmo\Tree\Entity
+                dir: "%kernel.root_dir%/../vendor/gedmo/doctrine-extensions/lib/Gedmo/Tree/Entity"
+                alias: GedmoTree # (optional) it will default to the name set for the mapping
+                is_bundle: false
 
 swiftmailer:
     transport: "%mailer_transport%"
@@ -78,3 +85,12 @@ knp_menu:
         builder_service: true
         container_aware: true
 
+white_october_breadcrumbs: ~
+
+stof_doctrine_extensions:
+    default_locale: en_US
+    orm:
+        default:
+            tree: true
+            timestampable: true
+            sluggable: true
