--- a/src/Olenaza/BlogBundle/Resources/config/routing_posts.yml
+++ b/src/Olenaza/BlogBundle/Resources/config/routing_posts.yml
@@ -5,6 +5,18 @@ posts_list:
     requirements:
       page: '\d+'
 
+posts_list_by_publication_date:
+    path:     /by-publication-date/{page}
+    defaults: { _controller: OlenazaBlogBundle:Post:listByPublicationDate, page: 1 }
+    methods: [GET]
+    requirements:
+      page: '\d+'
+
+posts_list_by_category:
+    path:     /category/{categoryId}
+    defaults: { _controller: OlenazaBlogBundle:Category:showPosts }
+    methods: [GET]
+
 posts_list_no_page:
     path:     /
     defaults:
@@ -13,18 +25,6 @@ posts_list_no_page:
       permanent: true
     methods: [GET]
 
-post_new:
-    path:     /new
-    defaults: { _controller: OlenazaBlogBundle:Post:new }
-
 post_show:
     path:     /{slug}
-    defaults: { _controller: OlenazaBlogBundle:Post:show }
-
-post_edit:
-    path:     /{slug}/edit
-    defaults: { _controller: OlenazaBlogBundle:Post:edit }
-
-post_delete:
-    path:     /{slug}/delete
-    defaults: { _controller: OlenazaBlogBundle:Post:delete }
+    defaults: { _controller: OlenazaBlogBundle:Post:show, slug: 2 }
