--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -105,3 +105,9 @@ knp_paginator:
     template:
         pagination: KnpPaginatorBundle:Pagination:sliding.html.twig     # sliding pagination controls template
         sortable: KnpPaginatorBundle:Pagination:sortable_link.html.twig # sort link template
+
+fos_user:
+    db_driver: orm
+    firewall_name: main
+    user_class: Olenaza\BlogBundle\Entity\User
+    use_username_form_type: false
