--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "whiteoctober/breadcrumbs-bundle": "^1.2",
         "stof/doctrine-extensions-bundle": "^1.2",
         "knplabs/knp-paginator-bundle": "^2.5",
-        "friendsofsymfony/user-bundle": "~2.0@dev"
+        "friendsofsymfony/user-bundle": "~2.0@dev",
+        "sonata-project/formatter-bundle": "^3.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
