Added possibility to edit comments

--- a/src/Olenaza/BlogBundle/Resources/config/routing.yml
+++ b/src/Olenaza/BlogBundle/Resources/config/routing.yml
@@ -5,3 +5,9 @@ welcome:
 about:
     path:     /about
     defaults: { _controller: OlenazaBlogBundle:About:index }
+
+comment_update:
+    path:     /comments/{id}/update
+    defaults: { _controller: OlenazaBlogBundle:Comment:edit}
+    requirements:
+        id: '\d+'
