--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,14 @@
+hwi_oauth_redirect:
+    resource: "@HWIOAuthBundle/Resources/config/routing/redirect.xml"
+    prefix:   /connect
+
+hwi_oauth_connect:
+    resource: "@HWIOAuthBundle/Resources/config/routing/connect.xml"
+    prefix:   /connect
+
+facebook_login:
+    path: /login/check_facebook
+
 olenaza_blog_pages:
     resource: "@OlenazaBlogBundle/Resources/config/routing.yml"
 
