--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "stof/doctrine-extensions-bundle": "^1.2",
         "knplabs/knp-paginator-bundle": "^2.5",
         "friendsofsymfony/user-bundle": "~2.0@dev",
-        "sonata-project/formatter-bundle": "^3.1"
+        "sonata-project/formatter-bundle": "^3.1",
+        "hwi/oauth-bundle": "^0.5.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
