--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,11 @@
         "knplabs/knp-paginator-bundle": "^2.5",
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "sonata-project/formatter-bundle": "^3.1",
-        "hwi/oauth-bundle": "^0.5.3"
+        "hwi/oauth-bundle": "^0.5.3",
+        "friendsofsymfony/rest-bundle": "^2.1",
+        "jms/serializer-bundle": "^1.1",
+        "nelmio/api-doc-bundle": "^2.13",
+        "symfony/console": "^3.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
