--- a/composer.json
+++ b/composer.json
@@ -33,17 +33,20 @@
         "stof/doctrine-extensions-bundle": "^1.2",
         "knplabs/knp-paginator-bundle": "^2.5",
         "friendsofsymfony/user-bundle": "~2.0@dev",
-        "sonata-project/formatter-bundle": "^3.1",
+        "sonata-project/formatter-bundle": "^3.1@dev",
         "hwi/oauth-bundle": "^0.5.3",
         "friendsofsymfony/rest-bundle": "^2.1",
         "jms/serializer-bundle": "^1.1",
         "nelmio/api-doc-bundle": "^2.13",
-        "symfony/console": "^3.2"
+        "symfony/console": "^3.2",
+        "guzzlehttp/guzzle": "~5.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.0",
-        "doctrine/doctrine-fixtures-bundle": "^2.3"
+        "doctrine/doctrine-fixtures-bundle": "^2.3",
+        "phpunit/phpunit": "^5.0",
+        "behat/behat": "^3.3"
     },
     "scripts": {
         "symfony-scripts": [
@@ -60,11 +63,6 @@
         "post-update-cmd": [
             "@symfony-scripts"
         ]
-    },
-    "config": {
-        "platform": {
-            "php": "5.5.9"
-        }
     },
     "extra": {
         "symfony-app-dir": "app",
