--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,6 +8,7 @@
          bootstrap="app/autoload.php"
 >
     <php>
+	<env name="TEST_BASE_URL" value="http://cheblog.ua" />
         <ini name="error_reporting" value="-1" />
         <server name="KERNEL_DIR" value="app/" />
     </php>
