--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
         "jms/serializer-bundle": "^1.1",
         "nelmio/api-doc-bundle": "^2.13",
         "symfony/console": "^3.2",
-        "guzzlehttp/guzzle": "~5.0"
+        "guzzlehttp/guzzle": "~5.0",
+        "friendsofsymfony/elastica-bundle": "^3.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
