--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -16,16 +16,18 @@ security:
             form_login:
                 provider: fos_userbundle
                 csrf_token_generator: security.csrf.token_manager
+                default_target_path: /
 
             logout:       true
             anonymous:    true
 
             oauth:
+                provider: fos_userbundle
                 resource_owners:
-                    facebook:      /login/check-facebook
+                    facebook:      /login_services/check-facebook
                 login_path:        /login
                 use_forward:       false
-                failure_path:      /login
+                failure_path:      /
                 oauth_user_provider:
                     service: blog.user_provider
 
