--- a/src/Olenaza/BlogBundle/Resources/config/services.yml
+++ b/src/Olenaza/BlogBundle/Resources/config/services.yml
@@ -65,4 +65,4 @@ services:
 
     blog.user_provider:
         class:     Olenaza\BlogBundle\Security\Core\User\MyFOSUBUserProvider
-        arguments: ['@fos_user.user_manager', { facebook: facebook_id }]
+        arguments: ['@fos_user.user_manager', { facebook: facebookId }]
